comments out project section

--- a/index.html
+++ b/index.html
@@ -38,12 +38,23 @@
                 froth, mazagran, saucer americano in galão roast.</p>
             </div>
         </div>
-            <!--
-            <div class="projects-section">
-                <div class="project">1</div>
-                <div class="project">2</div>
-                <div class="project">3</div>
+        <!-- <div class="projects-section">
+            <div class="technologies">
+                <ul>
+                    <li><i class="icon fab fa-html5"></i></li>
+                    <li><i class="icon fab fa-css3-alt"></i></li>
+                    <li><i class="icon fab fa-js"></i></li>
+                    <li><i class="icon fab fa-node-js"></i></li>
+                    <li><i class="icon fas fa-database"></i></li>
+                </ul>
             </div>
+            <div class="project">
+                <h4>Intent Manifesto</h4>
+            </div>
+            <div class="project">Project2</div>
+            <div class="project">Project3</div>
+        </div> -->
+            <!--
             <div class="contact-section">
                 <p class="contact-p">Aromatic cultivar aged aftertaste grounds mug barista. Mocha extraction percolator ut organic roast kopi-luwak. Id, cortado, con panna as, lungo dripper doppio iced ristretto steamed. Sugar, acerbic, grinder aromatic seasonal trifecta wings robusta froth at variety beans.</p>
                 <button class="resume-btn">Resume</button>
