capitalizes beiginning of paragraph in projects-section:

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 <body>
     <div class="landing-section">
         <header class="header">
-            <div class="logo">
+            <div class="logo" id="#">
             <img src="./images/LaurenAlynLogo.png" alt="logo" class="logo-img">
 
             </div>
             <nav class="nav-bar">
                 <ul class="nav">
-                    <li class="nav-item"><a href="#">Home</a></li>
                     <!-- <li class="nav-item"><a href="#">About</a></li> -->
                     <li class="nav-item"><a href="#projects">Projects</a></li>
                     <li class="nav-item"><a href="#">Contact</a></li>
@@ -49,7 +48,7 @@
                     <img src="./images/beverage-3157395_640.jpg" alt="project1" class="project-img">
                 </div>
                 <div class="project-p">
-                    <p>java crema percolator qui shop rich milk black dark. Cinnamon single origin fair trade, extra, strong java ristretto foam mocha irish acerbic single shot. Galão french press cinnamon body con panna barista viennese. Flavour, cappuccino milk eu, 
+                    <p>Java crema percolator qui shop rich milk black dark. Cinnamon single origin fair trade, extra, strong java ristretto foam mocha irish acerbic single shot. Galão french press cinnamon body con panna barista viennese. Flavour, cappuccino milk eu, 
                         froth, mazagran, saucer americano.
                     </p>
                 </div>
@@ -69,7 +68,7 @@
                         <img src="./images/business-2846221_640.jpg" alt="project1" class="project-img">
                     </div>
                     <div class="project-p">
-                        <p>java crema percolator qui shop rich milk black dark. Cinnamon single origin fair trade, extra, strong java ristretto foam mocha irish acerbic single shot. Galão french press cinnamon body con panna barista viennese. Flavour, cappuccino milk eu, 
+                        <p>Java crema percolator qui shop rich milk black dark. Cinnamon single origin fair trade, extra, strong java ristretto foam mocha irish acerbic single shot. Galão french press cinnamon body con panna barista viennese. Flavour, cappuccino milk eu, 
                             froth, mazagran, saucer americano.
                         </p>
                     </div>
@@ -89,7 +88,7 @@
                         <img src="./images/laptop-1205256_640.jpg" alt="project1" class="project-img">
                     </div>
                     <div class="project-p">
-                        <p>java crema percolator qui shop rich milk black dark. Cinnamon single origin fair trade, extra, strong java ristretto foam mocha irish acerbic single shot. Galão french press cinnamon body con panna barista viennese. Flavour, cappuccino milk eu, 
+                        <p>Java crema percolator qui shop rich milk black dark. Cinnamon single origin fair trade, extra, strong java ristretto foam mocha irish acerbic single shot. Galão french press cinnamon body con panna barista viennese. Flavour, cappuccino milk eu, 
                             froth, mazagran, saucer americano.
                         </p>
                     </div>
