--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
             </nav>
         </header>
 
-        <div class="landing-content" id='#'>
-            <h1 class="intro-name"><span>Hi !</span><br> I'm Lauren-Alyn</h1>
+        <div class="landing-content">
+            <div class="landing-title">
+                <h1 class="intro-name"><span class="hi">Hi !</span><br> I'm Lauren-Alyn</h1>
+            </div>
             <div class="about-section">
-                <div class="about-img-content">
-                    <!-- <img src="./images/Lauren1.jpg" alt="selfie"> -->
+                <div class="about-content-img">
+                    <img src="./images/temp1.jpg" alt="selfie">
                 </div>
-                <div class="about-content">
-                    <p class="about-p">Aromatic cultivar aged aftertaste grounds mug barista. Mocha extraction percolator ut organic roast kopi-luwak. Id, cortado, con panna as, lungo dripper doppio iced ristretto steamed. Sugar, acerbic, grinder aromatic seasonal trifecta wings robusta froth at variety beans.</p>
+                <div class="about-content-p">
+                    <p class="about-p"><span class="first-letter">A</span>romatic cultivar aged aftertaste grounds mug barista. Mocha extraction percolator ut organic roast kopi-luwak. Id, cortado, con panna as, lungo dripper doppio iced ristretto steamed. Sugar, acerbic, grinder aromatic seasonal trifecta wings robusta froth at variety beans.</p>
                     <p class="about-p">Extra fair trade, percolator java crema percolator qui shop rich milk black dark. Cinnamon single origin fair trade, extra, strong java ristretto foam mocha irish acerbic single shot. Galão french press cinnamon body con panna barista viennese. Flavour, cappuccino milk eu, 
                     froth, mazagran, saucer americano.</p>
                 </div>
