--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <body>
     <div class="landing-section">
         <header class="header">
-            <div class="logo" id="#">
+            <!-- <div class="logo" id="#">
             <img src="./images/LaurenAlynLogo.png" alt="logo" class="logo-img">
-
-            </div>
+            </div> -->
             <nav class="nav-bar">
                 <ul class="nav">
                     <!-- <li class="nav-item"><a href="#">About</a></li> -->
@@ -25,7 +24,7 @@
 
         <div class="landing-content">
             <div class="landing-title">
-                <h1 class="intro-name"><span class="hi">Hi !</span><br> I'm Lauren-Alyn</h1>
+                <h1 class="intro-name"><span class="hi">Hello!</span><br> I'm Lauren</h1>
             </div>
             <div class="about-section">
                 <div class="about-content-img">
